# materials_for_mc

./: .buildinfo  .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  compare_macroscopic_reaction.py  compare_macroscopic_total.py  compare_macroscopic_total_to_openmc.py  compare_macroscopic_total_to_openmc.py.py  compare_macroscopic_two_nuclides_reaction.py  compare_mean_free_path_to_openmc.py  compare_to_openmc.py  developer_info.html  genindex.html  index.html  installation.html  macroscopic_xs_plotter.html.bak  objects.inv  python_api.html  python_usage.html  reaction_plotter.html  rust_api.html  search.html  searchindex.js  serve.sh  todo.md  webassembly.html
.doctrees/: developer_info.doctree  environment.pickle  index.doctree  installation.doctree  python_api.doctree  python_usage.doctree  rust_api.doctree  webassembly.doctree
_sources/: index.md.txt  installation.md.txt  python_api.md.txt  python_usage.md.txt
docs/: Makefile  requirements.txt  test_docs_code.py
example_use/: compare_macroscopic_total_to_openmc.py  compare_mean_free_path_to_openmc.py  compare_microscopic_reaction.py  use_in_python.py
examples/: use_in_python.py
src/: config.rs  config_python.rs  config_wasm.rs  data.rs  data_python.rs  data_wasm.rs  element.rs  element_python.rs  element_wasm.rs  lib.rs  material.rs  material_python.rs  material_wasm.rs  materials.rs  materials_python.rs  nuclide.rs  nuclide_python.rs  nuclide_wasm.rs  python.rs  python_utils.rs  reaction.rs  reaction_python.rs  reaction_wasm.rs  url_cache.rs  utilities.rs
tests/: Be9.json  Fe54.json  Fe56.json  Fe57.json  Fe58.json  Li6.json  Li7.json  li6.json  li6_neutron.json  (+16 more)
(+27 files in other folders)
