[package]
name = "materials_for_mc"
version = "0.1.0"
edition = "2021"
description = "Material builder for Monte Carlo simulations"
license = "MIT"

[lib]
name = "materials_for_mc"
crate-type = ["cdylib", "rlib"]
# Keep the path the same
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"], optional = true  }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: for building wheels
[package.metadata.maturin]
python-source = "python"

[features]
# Define the pyo3 feature
default = []
pyo3 = ["dep:pyo3"]